--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=demo
 server.port=7090
 
 # Datasource configuration for PostgreSQL
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:38266/railway
+spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:26003/railway
 spring.datasource.username=postgres
-spring.datasource.password=kbIcWxSispnmoSaMsoTYWhqgySzjYUfL
+spring.datasource.password=RALdyEHkmyiUQHNxQagXEyVglUIjwJNq
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.generate-ddl=true
